--- a/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYBX990303010/FlowAskDetail.html
+++ b/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYBX990303010/FlowAskDetail.html
@@ -1,10 +1,247 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="stylesheet" href="../../../../Content/mui.min.css" />
+    <link rel="stylesheet" href="../../../../Content/mui.picker.min.css" />
+    <link rel="stylesheet" href="../../../../Content/mui.poppicker.css" />
+    <link rel="stylesheet" href="../../../../Content/upload.css" />
+    <link rel="stylesheet" href="../../../../Content/ApprovalUtils.css" />
+    <link rel="stylesheet" href="../../../../Content/DoneOrMyApproval.css" />
     <meta charset="utf-8" />
     <title></title>
 </head>
 <body>
+    <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
+        <form class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;">
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>公司名称</label>
+                    <textarea rows="2" id="fgsmc" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>部门名称</label>
+                    <textarea rows="2" id="fbmmc" readonly></textarea>
+                    <input type="hidden" id="fbmbm" readonly />
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>报销人</label>
+                    <textarea rows="2" id="fbxr" readonly></textarea>
+                    <input type="hidden" id="fbxrno" readonly />
+                    <input type="hidden" id="fgangwei" readonly />
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>报销日期</label>
+                    <textarea rows="2" id="fbxrq" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>车牌号</label>
+                    <textarea rows="2" id="fcph" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>月度预算金额</label>
+                    <textarea rows="2" id="fydysje" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>可用预算金额</label>
+                    <textarea rows="2" id="fkyysje" readonly></textarea>
+                    <input type="hidden" id="fyyysje" readonly />
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>费用属性</label>
+                    <textarea rows="2" id="ffysx" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>超预算情况（%）</label>
+                    <textarea rows="2" id="fcysqk" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>月报销标准</label>
+                    <textarea rows="2" id="fybxbz" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>年度可报销月数</label>
+                    <textarea rows="2" id="fndkbxys" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>年度报销标准</label>
+                    <textarea rows="2" id="fndbxbz" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>本年度已报销金额</label>
+                    <textarea rows="2" id="fbndybxje" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>超标准情况（%）</label>
+                    <textarea rows="2" id="fcbzqk" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
+                <label>费用报销明细</label>
+            </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>序号</label>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>费用项目</label>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>本次报销金额<i style="color:red;">*</i></label>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>1</label>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>车辆保险费</label>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <textarea rows="2" id="fclbxf" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>2</label>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>车辆燃油费</label>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <textarea rows="2" id="fclryf" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>3</label>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>车辆修理费</label>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <textarea rows="2" id="fclxlf" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>4</label>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>停车过路费</label>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <textarea rows="2" id="ftcglf" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>5</label>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>其他</label>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <textarea rows="2" id="fqt" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine padding">
 
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>合计</label>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <textarea rows="2" id="fhj" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <textarea rows="2" id="fhj_dx" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine padding">
+               <div class="mui-col-xs-12" style="display:flex;">
+                   <label>备注</label>
+                   <textarea rows="5" id="fbz" readonly></textarea>
+               </div>
+            </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-12" style="display:flex;">
+                    <label>单据数</label>
+                    <textarea rows="1" id="fdjs" readonly></textarea>
+                </div>
+            </div>
+
+            <div class="mui-input-row" style="height:7rem;overflow:scroll;" id="uploaddiv">
+                <div class="border border-t upload-img" style="top:0rem;">
+                    <!--上传图片-->
+                    <div class="clearfix upload-btn" id="children-bg">
+                        <label class="label">附件</label>
+                        <span class="tips" id="imageCount"><!--已添加0张--></span>
+                        <!--上传图片按钮  -->
+                        <span class="upload-addbtn" style="display:none;">
+                            <input type="file" accept="image/jpeg,image/jpg,image/png,image/jp2,image/bmp" id="file" style="opacity:0;">
+
+                        </span>
+
+                    </div>
+                    <div class="upload-img-list">
+
+                    </div>
+                </div>
+            </div>
+        </form>
+
+        <div class="mui-table-view" style="margin-bottom:1rem;">
+            <div class="mui-table-view-cell  mui-collapse mui-active">
+                <a class="mui-navigate-right" href="#" style="background-color:#00a0ea;color:white;font-size:0.75rem;">
+                    历史签核意见
+                </a>
+                <div class="mui-collapse-content">
+                    <!--流程列表-->
+                    <div class="list">
+                        <ul id="signff"></ul>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <input value="" id="stepId" name="stepId" type="hidden" />
+    <input type="hidden" id="flowPerId" name="flowPerId" value="" />
+    <input type="hidden" id="processName" name="processName" value="" />
+    <input type="hidden" id="noticePer" name="noticePer" value="" />
+    <input type="hidden" id="taskId" name="taskId" value="" />
+
+
+    <script type="text/javascript" src="../../../../Scripts/baidu-statistics.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/zepto.min.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.js"></script>
+    <!--<script src="http://yun.kingdee.com/res/js/qingjs.js"></script>-->
+    <script type="text/javascript" src="http://wb.weigaoholding.com:8090/res/js/qingjs.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.poppicker.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.picker.min.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/ApprovalUtils.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/util.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/upload.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/upload.detail.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/common.js"></script>
+    <script type="text/javascript" src="common.js"></script>
+    <script>
+
+        mui.init();
+
+        mui.ready(function () {
+            _init._preAskOrDone();
+
+        });
+    </script>
 </body>
 </html>
