--- a/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302003/FlowCreate.html
+++ b/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302003/FlowCreate.html
@@ -313,6 +313,25 @@
                 <label>国外出差明细</label>
             </div>
             <div id="mxlist_gw">
+                <div class="mui-row cutOffLine padding">
+                    <div class="mui-col-xs-3" style="display:flex;">
+                        <label>邀请方</label>
+                        <textarea rows="2" id="fyqf" placeholder="请填写"></textarea>
+                    </div>
+                    <div class="mui-col-xs-3" style="display:flex;">
+                        <label>邀请人</label>
+                        <textarea rows="2" id="fyqr" placeholder="请填写"></textarea>
+                    </div>
+                    <div class="mui-col-xs-3" style="display:flex;">
+                        <label>电话</label>
+                        <textarea rows="2" id="fphone" placeholder="请填写"></textarea>
+                    </div>
+                    <div class="mui-col-xs-3" style="display:flex;">
+                        <label>传真</label>
+                        <textarea rows="2" id="fcz" placeholder="请填写"></textarea>
+                    </div>
+                </div>
+
                 <div id="mx" class="divblock">
                     <div class="mui-input-row itemtitle">
                         <label>明细列表项</label>
