--- a/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302003/FlowDoneDetail.html
+++ b/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302003/FlowDoneDetail.html
@@ -262,7 +262,24 @@
                 <label>国外出差明细</label>
             </div>
             <div id="mxlist_gw">
-
+                <div class="mui-row cutOffLine padding">
+                    <div class="mui-col-xs-3" style="display:flex;">
+                        <label>邀请方</label>
+                        <textarea rows="2" id="fyqf" readonly></textarea>
+                    </div>
+                    <div class="mui-col-xs-3" style="display:flex;">
+                        <label>邀请人</label>
+                        <textarea rows="2" id="fyqr" readonly></textarea>
+                    </div>
+                    <div class="mui-col-xs-3" style="display:flex;">
+                        <label>电话</label>
+                        <textarea rows="2" id="fphone" readonly></textarea>
+                    </div>
+                    <div class="mui-col-xs-3" style="display:flex;">
+                        <label>传真</label>
+                        <textarea rows="2" id="fcz" readonly></textarea>
+                    </div>
+                </div>
             </div>
             <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx_gw" style="margin-top:0.5rem;display:none;">
                 添加国外出差明细
