--- a/BPMMobile/Pages/00KCY/YF0017004/FlowCreate.html
+++ b/BPMMobile/Pages/00KCY/YF0017004/FlowCreate.html
@@ -148,6 +148,7 @@
                             <div class="mui-col-xs-4" style="display:flex;">
                                 <label>是否有评估价值<i style="color:red;">*</i></label>
                                 <textarea rows="2" id="fif_pgjz_xx" readonly></textarea>
+                                <input type="hidden" id="fshrq_xx" readonly/>
                             </div>
                         </div>
                         <div class="mui-row cutOffLine padding">
